@@ -48,7 +48,7 @@ type MetricSet struct {
 // Part of new is also setting up the configuration by processing additional
 // configuration entries if needed.
 func New(base mb.BaseMetricSet) (mb.MetricSet, error) {
-	cfgwarn.Experimental("The golang heap metricset is experimental")
+	cfgwarn.Beta("The golang heap metricset is beta")
 
 	http, err := helper.NewHTTP(base)
 	if err != nil {
